@startuml
' Major classes only; value types (Vec2D, CPose) and libraries are omitted.
skinparam classAttributeIconSize 0
skinparam style strictuml

class CSimulation
class CLoopReader
class CRender
class CWallRobot
class CLineRobot
class CSensor
class CLineSensor

' mWalls and mLine are contained members; the diamond is at the owner.
CSimulation *-- "2" CLoopReader

' Run() creates the renderer and robots as locals, not contained members.
' Association represents these uses.
CSimulation --> CRender
CSimulation --> CWallRobot
CSimulation --> CLineRobot

' Each robot contains exactly two sensors of its own type.
CWallRobot *-- "2" CSensor
CLineRobot *-- "2" CLineSensor

' Draw() receives the shared renderer by reference.
CWallRobot --> CRender
CLineRobot --> CRender

' No inheritance: CLineRobot and CLineSensor are independent classes.
@enduml
